# breaking-new-detection

./: .env.dep  .env.example  .gitignore  README.md  is_break.py  main.py  main.sh  pyproject.toml  save_model.py  similarity.py
prompts/: prompt_v1.py
scrappers/: scrape_ATN.py  scrape_boisakhi.py  scrape_ekattor.py  scrape_independent.py  scrape_jamuna.py  scrape_saTV.py  scrape_somoy.py
utils/: db.py  filters.py  helper.py  is_break.py  news_detector.py  news_filter.py  news_summary.py  send_breaking_news.py  send_message.py  time_parser.py
