[project]
name = "news-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "mysql>=0.0.3",
    "mysql-connector-python>=9.5.0",
    "numpy>=2.3.5",
    "ollama>=0.6.1",
    "sentence-transformers>=5.1.2",
    "tqdm>=4.67.1",
]
